--- a/JuMP_many_user_defined_functions.ipynb
+++ b/JuMP_many_user_defined_functions.ipynb
@@ -5,7 +5,7 @@
    "id": "8f811a88",
    "metadata": {},
    "source": [
-    "# JuMP でたくさん user-defined functions を使い時のはなし"
+    "# JuMP でたくさん user-defined functions を使う時のはなし"
    ]
   },
   {
